--- a/termProject/css/small.css
+++ b/termProject/css/small.css
@@ -178,6 +178,7 @@ p {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
+    justify-items: center;
     align-items: center;
     border: 1px solid rgba(0, 0, 0, 0.125);
     border-radius: 0.25rem;
